--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,3 +1,21 @@
 .red {
   color: red;
 }
+
+.navbar {
+  background: #EEE;
+}
+
+.navbar .active a, .navbar .active a:hover {
+  background: #DDD !important;
+}
+
+.page footer {
+  color: white;
+  background: #333;
+  padding: 20px 0 10px 0;
+}
+
+.main-page {
+  min-height: 700px;
+}
