Add Todo and Product List example

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -17,5 +17,39 @@
 }
 
 .main-page {
-  min-height: 700px;
+  min-height: 600px;
+}
+
+.tab-pane {
+  padding-top: 20px;
+}
+
+.description {
+  padding-top: 70px;
+}
+
+.todo {
+  ul {
+    padding: 0;
+  }
+
+  li {
+    list-style: none;
+  }
+
+  label {
+    font-weight: normal;
+    cursor: pointer;
+  }
+
+  .done {
+    text-decoration: line-through;
+    color: #999;
+  }
+}
+
+.products {
+  th {
+    padding-top: 10px;
+  }
 }
