--- a/src/less/app.less
+++ b/src/less/app.less
@@ -14,10 +14,15 @@
   color: white;
   background: #333;
   padding: 20px 0 10px 0;
+  margin-top: 50px;
 }
 
 .main-page {
-  min-height: 600px;
+
+}
+
+.about {
+  max-width: 800px;
 }
 
 .tab-pane {
