--- a/src/less/app.less
+++ b/src/less/app.less
@@ -15,6 +15,11 @@
   background: #333;
   padding: 20px 0 10px 0;
   margin-top: 50px;
+
+  a {
+    color: white;
+    text-decoration: underline;
+  }
 }
 
 .main-page {
